--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
 /*Gallery */
 .card-img-top {
   width: 100%;
-  height: 300px; /* Adjust this value as needed */
+  height: 100%; /* Adjust this value as needed */
   object-fit: cover; /* Ensures images are scaled to cover the entire area without stretching */
 }
 
@@ -38,6 +38,7 @@ body {
   color: white;
   width: 100%;
   text-align: center;
+   overflow-y: auto; /* Enable vertical scrolling for the gallery container */
 }
 .modal-content img {
   width: 100%;
