--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,22 @@ body {
   text-align: center;
   overflow-y: auto; /* Enable vertical scrolling for the gallery container */
 }
-.modal-content img {
-  width: 100%;
-  object-fit: contain; /* Ensures the modal images scale to fit within the modal without cropping */
+
+.blur-background {
+  filter: blur(5px);
+  pointer-events: none;
+}
+
+.modal-backdrop {
+  backdrop-filter: blur(10px);
+}
+
+/* Prevent body from scrolling when modal is open */
+.modal-open {
+  overflow: hidden;
+}
+.modal-body img{
+   display: block;
+  max-width: 100%;
+  height: auto;
 }
